--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
 
   firebase_auth:
   shared_preferences: ^2.2.2
+  flutter_svg: ^2.0.10+1
+  intl: ^0.19.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
